--- a/SkilEx/Additional Services/AdditionalServices.storyboard
+++ b/SkilEx/Additional Services/AdditionalServices.storyboard
@@ -38,7 +38,7 @@
                                                     <constraint firstAttribute="width" constant="204" id="5kv-V3-ufv"/>
                                                     <constraint firstAttribute="height" constant="71" id="iWQ-Mz-wkv"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="25"/>
+                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="35"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -53,6 +53,20 @@
                                                 <state key="normal" title="Claim Reward">
                                                     <color key="titleColor" red="0.26746687289999999" green="0.55522423980000002" blue="0.79592204089999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                        <real key="value" value="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                        <size key="value" width="5" height="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                        <real key="value" value="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                                 <connections>
                                                     <action selector="rewardAction:" destination="OBw-Y2-osK" eventType="touchUpInside" id="Hww-KJ-oYZ"/>
                                                 </connections>
