--- a/SkilEx/MainViewControllers/MainView.storyboard
+++ b/SkilEx/MainViewControllers/MainView.storyboard
@@ -1818,14 +1818,14 @@
             <objects>
                 <viewController storyboardIdentifier="viewSummary" title="View Summary" modalPresentationStyle="fullScreen" hidesBottomBarWhenPushed="YES" id="9vQ-qD-lpd" customClass="ViewSummary" customModule="SkilEx" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gu5-j0-bXf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BlW-3o-qFZ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W4v-xz-1G5">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9n-cc-Ht6">
                                                 <rect key="frame" x="15" y="9" width="128.5" height="21"/>
@@ -2097,11 +2097,11 @@
             <objects>
                 <viewController storyboardIdentifier="customerAddress" title="Customer Address" modalPresentationStyle="fullScreen" hidesBottomBarWhenPushed="YES" id="KCa-6R-24n" customClass="CustomerAddress" customModule="SkilEx" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YRN-IJ-9M4">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="906"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="950"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hb-ZL-Lg7">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="908"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="952"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ird-qf-6Mz">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="908"/>
@@ -2330,11 +2330,11 @@
             <objects>
                 <viewController storyboardIdentifier="termsandCondition" title="Terms And Condition" id="lJN-io-L74" customClass="TermsandCondition" customModule="SkilEx" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ggU-Y6-kL7">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IqB-Pl-fPU">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="162" id="aWb-D5-Owx" customClass="TermsandConditionCell" customModule="SkilEx" customModuleProvider="target">
@@ -2407,7 +2407,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wIB-zc-48D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5132" y="464.6176911544228"/>
+            <point key="canvasLocation" x="4850" y="467"/>
         </scene>
         <!--bookingSuccess-->
         <scene sceneID="KNT-os-o5v">
@@ -2417,7 +2417,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9W9-IT-1ZE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4448" y="917"/>
+            <point key="canvasLocation" x="4512" y="894"/>
         </scene>
         <!--SkilEx-->
         <scene sceneID="0ag-UK-M8Q">
@@ -2588,7 +2588,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t6y-ym-bsz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4205.6000000000004" y="1365.5172413793105"/>
+            <point key="canvasLocation" x="4206" y="1378"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="knh-uh-dup">
@@ -3180,17 +3180,17 @@
             <objects>
                 <viewController storyboardIdentifier="advancePayment" title="Advance Payment" modalPresentationStyle="fullScreen" hidesBottomBarWhenPushed="YES" id="Glr-hq-Yri" customClass="AdvancePayment" customModule="SkilEx" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="reV-CC-FYX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VFV-px-KHa">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vo8-oq-scy">
-                                        <rect key="frame" x="17" y="14" width="340" height="582"/>
+                                        <rect key="frame" x="17" y="14" width="340" height="420"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5S5-UQ-QGX">
-                                                <rect key="frame" x="108" y="349" width="130" height="39"/>
+                                                <rect key="frame" x="108" y="252" width="130" height="28"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.1647058824" green="0.45882352939999999" blue="0.73333333329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
@@ -3202,18 +3202,18 @@
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="onlinepay" translatesAutoresizingMaskIntoConstraints="NO" id="MMn-VD-0OB">
-                                                <rect key="frame" x="98" y="51" width="150" height="172"/>
+                                                <rect key="frame" x="98" y="37" width="150" height="124"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Advance Payment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aw-4D-Bxm">
-                                                <rect key="frame" x="-9" y="248" width="357" height="24"/>
+                                                <rect key="frame" x="-9" y="179" width="357" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="20"/>
                                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rs.200" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYD-60-Rnw">
-                                                <rect key="frame" x="89" y="281" width="168" height="36"/>
+                                                <rect key="frame" x="89" y="203" width="168" height="26"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                                                 <nil key="highlightedColor"/>
@@ -3255,7 +3255,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oNs-j0-YEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2478" y="1204"/>
+            <point key="canvasLocation" x="2477.5999999999999" y="1203.1484257871066"/>
         </scene>
         <!--Choose Address-->
         <scene sceneID="07E-6e-bH3">
@@ -3462,12 +3462,11 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFM-f6-ecM">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="227"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5of-aZ-5jP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="236"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <action selector="close:" destination="VJS-Wr-FOk" eventType="touchUpInside" id="2U9-lx-NnZ"/>
-                                    <action selector="close:" destination="uvH-0J-Rm7" eventType="touchUpInside" id="nmZ-mX-pPl"/>
+                                    <action selector="close:" destination="VJS-Wr-FOk" eventType="touchUpInside" id="HXy-Lo-NVJ"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -3476,10 +3475,6 @@
                         <constraints>
                             <constraint firstItem="IFp-13-1ud" firstAttribute="bottom" secondItem="cub-Kc-YNG" secondAttribute="bottom" id="1kg-4Z-3jz"/>
                             <constraint firstItem="IFp-13-1ud" firstAttribute="trailing" secondItem="cub-Kc-YNG" secondAttribute="trailing" id="262-rl-csO"/>
-                            <constraint firstItem="YFM-f6-ecM" firstAttribute="top" secondItem="cub-Kc-YNG" secondAttribute="top" id="3EJ-G2-v6Y"/>
-                            <constraint firstItem="YFM-f6-ecM" firstAttribute="leading" secondItem="cub-Kc-YNG" secondAttribute="leading" id="97U-sa-y7J"/>
-                            <constraint firstItem="YFM-f6-ecM" firstAttribute="trailing" secondItem="cub-Kc-YNG" secondAttribute="trailing" id="F3t-Xz-LHG"/>
-                            <constraint firstItem="IFp-13-1ud" firstAttribute="top" secondItem="YFM-f6-ecM" secondAttribute="bottom" constant="8" symbolic="YES" id="LMw-Q7-zJv"/>
                             <constraint firstItem="IFp-13-1ud" firstAttribute="leading" secondItem="cub-Kc-YNG" secondAttribute="leading" id="gz7-Ux-JNv"/>
                         </constraints>
                     </view>
@@ -3493,7 +3488,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yyU-5Z-hnc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="uvH-0J-Rm7" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="957.60000000000002" y="1887.7061469265368"/>
         </scene>
@@ -3932,7 +3926,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZSg-eY-GYU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2478" y="1948"/>
+            <point key="canvasLocation" x="2494" y="1948"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="2Vx-CN-AQo">
@@ -4010,10 +4004,10 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="YJ2-0K-weh"/>
+        <segue reference="Rvs-af-qdO"/>
         <segue reference="1PX-ZQ-xGS"/>
         <segue reference="LNc-mI-MNU"/>
-        <segue reference="Smc-dB-QDw"/>
+        <segue reference="sgv-fL-rBr"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="aboutsusmobile" width="24.5" height="24.5"/>
