--- a/SkilEx/MainViewControllers/MainView.storyboard
+++ b/SkilEx/MainViewControllers/MainView.storyboard
@@ -3206,7 +3206,7 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Advance Payment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aw-4D-Bxm">
-                                                <rect key="frame" x="-9" y="179" width="357" height="17"/>
+                                                <rect key="frame" x="-9" y="178" width="357" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="20"/>
                                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -3998,14 +3998,9 @@
             <point key="canvasLocation" x="3126" y="-931"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="SL4-fx-t6b">
-            <size key="intrinsicContentSize" width="168.5" height="28"/>
-        </designable>
-    </designables>
     <inferredMetricsTieBreakers>
         <segue reference="Rvs-af-qdO"/>
-        <segue reference="1PX-ZQ-xGS"/>
+        <segue reference="ZR5-Rh-ToP"/>
         <segue reference="LNc-mI-MNU"/>
         <segue reference="sgv-fL-rBr"/>
     </inferredMetricsTieBreakers>
